[package]
name = "tach"
version = "0.15.5"
edition = "2021"

[lib]
name = "tach"
crate-type = ["cdylib", "lib"]
bench = false

[dependencies]
pyo3 = "0.22.5"
regex = "1.11.1"
once_cell = "1.20.2"
walkdir = "2.5.0"
ruff_python_ast = { git = "https://github.com/astral-sh/ruff.git", tag = "v0.4.5" }
ruff_python_parser = { git = "https://github.com/astral-sh/ruff.git", tag = "v0.4.5" }
ruff_source_file = { git = "https://github.com/astral-sh/ruff.git", tag = "v0.4.5" }
cached = { version = "0.54.0", features = ["disk_store"] }
globset = "0.4.15"
toml = "0.8.19"
thiserror = "2.0.3"
serde = { version = "1.0.215", features = ["derive"] }
glob = "0.3.1"
petgraph = "0.6.5"
serde_json = "1.0.133"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
pprof = { version = "0.14", features = ["flamegraph", "criterion"] }
rstest = "0.22.0"
