[package]
name = "tach"
version = "0.19.2"
edition = "2021"

[lib]
name = "tach"
crate-type = ["cdylib", "lib"]
bench = false

[dependencies]
pyo3 = { version = "0.22.5", features = ["abi3-py37"] }
regex = "1.11.1"
once_cell = "1.20.2"
walkdir = "2.5.0"
ruff_python_ast = { git = "https://github.com/astral-sh/ruff.git", tag = "v0.4.5" }
ruff_python_parser = { git = "https://github.com/astral-sh/ruff.git", tag = "v0.4.5" }
ruff_source_file = { git = "https://github.com/astral-sh/ruff.git", tag = "v0.4.5" }
cached = { version = "0.54.0", features = ["disk_store"] }
globset = "0.4.15"
toml = "0.8.19"
thiserror = "2.0.7"
serde = { version = "1.0.216", features = ["derive"] }
glob = "0.3.1"
petgraph = "0.6.5"
serde_json = "1.0.134"
tempfile = "3.14.0"
lsp-server = "0.7.7"
lsp-types = "0.97.0"
crossbeam-channel = "0.5.14"
ctrlc = "3.4.5"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
pprof = { version = "0.14", features = ["flamegraph", "criterion"] }
rstest = "0.22.0"
