[package]
name = "tach"
version = "0.28.5"
edition = "2021"

[lib]
name = "tach"
crate-type = ["cdylib", "lib"]
bench = false

[dependencies]
pyo3 = { version = "0.22.5", features = ["abi3-py37", "auto-initialize"] }
regex = "1.11.1"
once_cell = "1.21.3"
ruff_python_ast = { git = "https://github.com/astral-sh/ruff.git", tag = "0.9.3" }
ruff_python_parser = { git = "https://github.com/astral-sh/ruff.git", tag = "0.9.3" }
ruff_linter = { git = "https://github.com/astral-sh/ruff.git", tag = "0.9.3" }
ruff_source_file = { git = "https://github.com/astral-sh/ruff.git", tag = "0.9.3" }
ruff_text_size = { git = "https://github.com/astral-sh/ruff.git", tag = "0.9.3" }
cached = { version = "0.54.0", features = ["disk_store"] }
globset = "0.4.15"
toml = "0.8.19"
thiserror = "2.0.7"
serde = { version = "1.0.216", features = ["derive"] }
glob = "0.3.2"
petgraph = "0.7.1"
serde_json = "1.0.134"
tempfile = "3.17.0"
lsp-server = "0.7.7"
lsp-types = "0.97.0"
crossbeam-channel = "0.5.14"
ctrlc = "3.4.5"
rayon = "1.10.0"
parking_lot = "0.12.3"
itertools = "0.14.0"
toml_edit = "0.22.24"
console = "0.15.11"
ignore = "0.4.23"
dashmap = { version = "6.1.0", features = ["serde", "rayon", "inline"] }

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]

[profile.profiling]
inherits = "release"
debug = true


[dev-dependencies]
rstest = "0.24.0"
serial_test = "3.2.0"
