[project]
name = "many_features"
version = "0.0.1"
dependencies = [
    "pyyaml~=6.0",
    "tomli>=1.2.2",
    "tomli-w~=1.0",
    "rich~=13.0",
    "prompt-toolkit~=3.0",
    "GitPython~=3.1",
    "networkx>=2.6,<4.0",
    "pydot>=2,<4",
    "stdlib-list>=0.10.0; python_version < '3.10'",
    "importlib_metadata>=6.0; python_version == '3.7'",
]

[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[tool.maturin]
python-source = "real_src"
module-name = "tach.extension"
features = ["pyo3/extension-module"]
